--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,72 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/platinumFavicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/platinumFavicon.svg" />
+
+    <!-- Primary Meta Tags -->
     <title>Official Website of PCRG</title>
+    <meta
+      name="title"
+      content="Official Website of PCRG - Platinum City Real Estate Group"
+    />
+    <meta
+      name="description"
+      content="Join PCRG Initiative, the leading real estate referral network. Build your network, connect with top realtors, and grow your real estate business."
+    />
+    <meta
+      name="keywords"
+      content="PCRG, Platinum City Real Estate, real estate network, realtor referrals, property network"
+    />
+
+    <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pcrginitiative.com/" />
+    <meta
+      property="og:title"
+      content="Official Website of PCRG - Platinum City Real Estate Group"
+    />
+    <meta
+      property="og:description"
+      content="Join PCRG Initiative, the leading real estate referral network. Build your network, connect with top realtors, and grow your real estate business."
+    />
+    <meta
+      property="og:image"
+      content="https://pcrginitiative.com/pcrgLogo.svg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="PCRG - Platinum City Real Estate Group"
+    />
+    <meta property="og:site_name" content="PCRG Initiative" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://pcrginitiative.com/" />
+    <meta
+      name="twitter:title"
+      content="Official Website of PCRG - Platinum City Real Estate Group"
+    />
+    <meta
+      name="twitter:description"
+      content="Join PCRG Initiative, the leading real estate referral network. Build your network, connect with top realtors, and grow your real estate business."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pcrginitiative.com/pcrgLogo.svg"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="PCRG - Platinum City Real Estate Group"
+    />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#0f1f1f" />
   </head>
   <body>
     <div id="root"></div>
