--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <title>Official Website of PCRG</title>
     <meta
       name="title"
-      content="Official Website of PCRG - Platinum City Real Estate Group"
+      content="Official Website of PCRG - Platinum Cape Realtors Group (PCRG)"
     />
     <meta
       name="description"
@@ -19,7 +19,7 @@
     />
     <meta
       name="keywords"
-      content="PCRG, Platinum City Real Estate, real estate network, realtor referrals, property network"
+      content="PCRG, Platinum Cape Realtors Group (PCRG), real estate network, realtor referrals, property network"
     />
 
     <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
@@ -27,7 +27,7 @@
     <meta property="og:url" content="https://pcrginitiative.com/" />
     <meta
       property="og:title"
-      content="Official Website of PCRG - Platinum City Real Estate Group"
+      content="Official Website of PCRG - Platinum Cape Realtors Group (PCRG)"
     />
     <meta
       property="og:description"
